--- a/app/src/main/res/layout/content_add_activity.xml
+++ b/app/src/main/res/layout/content_add_activity.xml
@@ -21,6 +21,7 @@
                 android:layout_height="46dp"
                 android:ems="10"
                 android:hint="Activity Name"
+                android:layout_gravity="center"
                 android:inputType="textPersonName"
                 android:textColor="#000000"
                 android:textSize="14sp"
@@ -37,7 +38,7 @@
                 android:layout_height="46dp"
                 android:ems="10"
                 android:hint="Date Completed"
-                android:textAlignment="viewStart"
+                android:layout_gravity="center"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +52,7 @@
                 android:layout_width="100dp"
                 android:layout_height="43dp"
                 android:layout_marginTop="8dp"
+                android:layout_gravity="center"
                 android:layout_marginEnd="56dp"
                 android:entries="@array/cpdMins"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +65,7 @@
                 android:layout_width="100dp"
                 android:layout_height="43dp"
                 android:layout_marginStart="56dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:entries="@array/cpdHours"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +76,7 @@
                 android:layout_width="300dp"
                 android:layout_height="46dp"
                 android:entries="@array/cpdType"
+                android:layout_gravity="center"
                 android:spinnerMode="dialog"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +90,7 @@
                 android:id="@+id/addActivityDescription"
                 android:layout_width="300dp"
                 android:layout_height="46dp"
+                android:layout_gravity="center"
                 android:ems="10"
                 android:gravity="start|top"
                 android:hint="Description of Activity"
@@ -105,6 +110,7 @@
                 android:layout_height="46dp"
                 android:layout_marginTop="4dp"
                 android:hint="What did you do?"
+                android:layout_gravity="center"
                 android:inputType="textMultiLine"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -119,6 +125,7 @@
                 android:layout_marginTop="8dp"
                 android:hint="What did you learn?"
                 android:inputType="textMultiLine"
+                android:layout_gravity="center"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.504"
@@ -132,6 +139,7 @@
                 android:layout_marginTop="8dp"
                 android:hint="What would you do now differently?"
                 android:inputType="textMultiLine"
+                android:layout_gravity="center"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.504"
@@ -144,6 +152,7 @@
                 android:layout_height="46dp"
                 android:layout_marginTop="8dp"
                 android:hint="Who has benefited?"
+                android:layout_gravity="center"
                 android:inputType="textMultiLine"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -157,6 +166,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Add Photo"
+                android:layout_gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.212"
@@ -170,6 +180,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Gallery"
+                android:layout_gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.819"
@@ -182,6 +193,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="12dp"
+                android:layout_gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
@@ -194,6 +206,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="24dp"
+                android:layout_gravity="center"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
