--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#3FABD9</color>
+    <color name="colorPrimaryDark">#1E82C2</color>
+    <color name="colorAccent">#BA324F</color>
     <color name="green">@android:color/holo_green_dark</color>
 </resources>
