--- a/app/src/main/res/layout/activity_audit_home.xml
+++ b/app/src/main/res/layout/activity_audit_home.xml
@@ -18,7 +18,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimaryDark"
+            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -27,17 +27,17 @@
         android:id="@+id/howToTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="How to complete your Continuing Professional Development Audit Profile."
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        android:layout_margin="16dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     <!--TODO: SEE HCCP HOW TO COMPLETE CPD PROFILE PDF FOR TEXT NEEDED HERE -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/howToTitle"
+        android:layout_margin="16dp"
         android:text="If you have been randomly selected to complete a CPD audit, you will need to complete the following steps."
-        android:layout_margin="16dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/howToTitle" />
 
     <Button
         android:id="@+id/startProfileBtn"
@@ -50,6 +50,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
         app:layout_constraintVertical_bias="0.201" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
