--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,8 @@
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:itemTextColor="@color/standardTextGrey"
+        app:itemIconTint="@color/colorPrimaryDark"
         app:menu="@menu/nav_menu"
         app:headerLayout="@layout/nav_header"
         android:fitsSystemWindows="true"
