--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -49,7 +49,7 @@
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:layout_width="wrap_content"
