--- a/app/src/main/res/layout/content_view_audit.xml
+++ b/app/src/main/res/layout/content_view_audit.xml
@@ -104,7 +104,7 @@
             android:id="@+id/saveProfileBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save Profile"/>
+            android:text="Save Profile and send to email"/>
 
     </LinearLayout>
 
