--- a/app/src/main/res/layout/cpdactivity_view_layout.xml
+++ b/app/src/main/res/layout/cpdactivity_view_layout.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="#42A5F5"
+        app:cardBackgroundColor="@color/rcsltYellow"
         app:cardCornerRadius="0dp"
         app:cardElevation="5dp"
         app:contentPadding="0dp"
