--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3FABD9</color>
-    <color name="colorPrimaryDark">#1E82C2</color>
+    <color name="colorPrimary">#1E82C2</color>
+    <color name="colorPrimaryDark">#2F334F</color>
     <color name="colorAccent">#BA324F</color>
-    <color name="green">@android:color/holo_green_dark</color>
+
     <color name="pie_green">#2ecc71</color>
     <color name="pie_yellow">#f1c40f</color>
     <color name="pie_red">#e74c3c</color>
     <color name="pie_blue">#3498db</color>
     <color name="pie_purple">#512DA8</color>
+
+    <color name="rcsltYellow">#FFF117</color>
+    <color name="rcsltDarkBlue">#2F334F</color>
+
+    <color name="niceGreen">#009639</color>
+    <color name="standardTextGrey">#808080</color>
+
+
+
+
 
 </resources>
