--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 
     <color name="niceGreen">#009639</color>
     <color name="standardTextGrey">#808080</color>
+    <color name="white">#FFFFFF</color>
 
 
 
