--- a/app/src/main/res/layout/content_add_activity.xml
+++ b/app/src/main/res/layout/content_add_activity.xml
@@ -8,165 +8,199 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="74dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/addActivityName"
-                android:layout_width="300dp"
-                android:layout_height="46dp"
-                android:ems="10"
-                android:hint="Activity Name"
-                android:layout_gravity="center"
-                android:inputType="textPersonName"
-                android:textColor="#000000"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.504"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.023" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/addActivityNameLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="10dp"
+                android:hint="Activity Name">
 
-            <TextView
-                android:id="@+id/cpdDate"
-                android:layout_width="300dp"
-                android:layout_height="46dp"
-                android:ems="10"
-                android:hint="Date Completed"
-                android:layout_gravity="center"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.495"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addActivityName"
-                app:layout_constraintVertical_bias="0.02" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addActivityName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-            <Spinner
-                android:id="@+id/cpdMins"
-                android:layout_width="100dp"
-                android:layout_height="43dp"
-                android:layout_marginTop="8dp"
-                android:layout_gravity="center"
-                android:layout_marginEnd="56dp"
-                android:entries="@array/cpdMins"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/cpdHours"
-                app:layout_constraintTop_toBottomOf="@+id/cpdDate" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <Spinner
-                android:id="@+id/cpdHours"
-                android:layout_width="100dp"
-                android:layout_height="43dp"
-                android:layout_marginStart="56dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:entries="@array/cpdHours"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cpdDate" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp">
 
-            <Spinner
-                android:id="@+id/cpdType"
-                android:layout_width="300dp"
-                android:layout_height="46dp"
-                android:entries="@array/cpdType"
-                android:layout_gravity="center"
-                android:spinnerMode="dialog"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.495"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cpdHours"
-                app:layout_constraintVertical_bias="0.017" />
+                <Button
+                    android:id="@+id/cpdDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="Select Date"/>
+
+                <TextView
+                    android:id="@+id/cpdDateResult"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="16dp"/>
+
+            </LinearLayout>
 
 
-            <EditText
-                android:id="@+id/addActivityDescription"
-                android:layout_width="300dp"
-                android:layout_height="46dp"
-                android:layout_gravity="center"
-                android:ems="10"
-                android:gravity="start|top"
-                android:hint="Description of Activity"
-                android:inputType="textMultiLine"
-                android:textColor="#000000"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.495"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cpdType"
-                app:layout_constraintVertical_bias="0.021" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/cpdHoursLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:hint="Hours">
 
-            <EditText
-                android:id="@+id/addReflection1"
-                android:layout_width="300dp"
-                android:layout_height="46dp"
-                android:layout_marginTop="4dp"
-                android:hint="What did you do?"
-                android:layout_gravity="center"
-                android:inputType="textMultiLine"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.495"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addActivityDescription" />
+                <AutoCompleteTextView
+                    android:id="@+id/cpdHours"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/addReflection2"
-                android:layout_width="300dp"
-                android:layout_height="46dp"
-                android:layout_marginTop="8dp"
-                android:hint="What did you learn?"
-                android:inputType="textMultiLine"
-                android:layout_gravity="center"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.504"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addReflection1" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/cpdMinsLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:hint="Minutes">
 
-            <EditText
-                android:id="@+id/addReflection3"
-                android:layout_width="300dp"
-                android:layout_height="46dp"
-                android:layout_marginTop="8dp"
-                android:hint="What would you do now differently?"
-                android:inputType="textMultiLine"
-                android:layout_gravity="center"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.504"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addReflection2" />
+                <AutoCompleteTextView
+                    android:id="@+id/cpdMins"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/addReflection4"
-                android:layout_width="300dp"
-                android:layout_height="46dp"
-                android:layout_marginTop="8dp"
-                android:hint="Who has benefited?"
-                android:layout_gravity="center"
-                android:inputType="textMultiLine"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.504"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addReflection3" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/cpdTypeLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:hint="Activity Type">
+
+                <AutoCompleteTextView
+                    android:id="@+id/cpdType"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/addActivityDescriptionLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:hint="Activity Description">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addActivityDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/addReflection1Layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:hint="What did you do?">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addReflection1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/addReflection2Layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:hint="What did you learn?">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addReflection2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/addReflection3Layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:hint="What would you do now differently?">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addReflection3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/addReflection4Layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:hint="Who has benefited?">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addReflection4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <Button
                 android:id="@+id/addDocBtn"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Add Photo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:text="Take Photo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.212"
@@ -176,11 +210,13 @@
 
             <Button
                 android:id="@+id/galleryBtn"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Gallery"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:text="Gallery"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.819"
@@ -190,10 +226,12 @@
 
             <ImageView
                 android:id="@+id/imgPreview"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
                 android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
@@ -204,23 +242,20 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="24dp"
-                android:layout_gravity="center"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/supportingDoc" />
-
-
+                app:layout_constraintTop_toBottomOf="@+id/imgPreview" />
 
         </LinearLayout>
 
 
     </ScrollView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
